--- a/zillow_final.ipynb
+++ b/zillow_final.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b013efb8",
+   "id": "001a6a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaff5661",
+   "id": "9b2227d3",
    "metadata": {},
    "source": [
     "# Zillow Regression Project: Estimating Home Value\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "86b431d7",
+   "id": "bc2328a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7d4bbd",
+   "id": "c05e03b0",
    "metadata": {},
    "source": [
     "# Project Planning\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb92a380",
+   "id": "400178ef",
    "metadata": {},
    "source": [
     "# Acquire"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8bd4d91",
+   "id": "aac6b949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e58bc28",
+   "id": "fe5a803f",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6f5e42aa",
+   "id": "284f0c1d",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e5c15357",
+   "id": "ada0bccb",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5c5e61",
+   "id": "259545a0",
    "metadata": {},
    "source": [
     "### Acquire Takeaways\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a08cbea",
+   "id": "b81d490f",
    "metadata": {},
    "source": [
     "# Prepare"
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9451e701",
+   "id": "a8e8df44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca0e7cc3",
+   "id": "63994c69",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0bf41afd",
+   "id": "0216f7b8",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "060c4433",
+   "id": "552c6740",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "04e85f90",
+   "id": "2fc95950",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b959bc37",
+   "id": "ba6634de",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9e844146",
+   "id": "46080107",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6aabc8d1",
+   "id": "78009a5c",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a94ac6c9",
+   "id": "0633cc93",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f600c65",
+   "id": "0a2226ed",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ad3b4054",
+   "id": "3f6667fc",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6d4edbe1",
+   "id": "3395669f",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "63f87271",
+   "id": "a2f5afab",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c8b15caf",
+   "id": "17686a7c",
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bb6d83d4",
+   "id": "8590e2cc",
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1b49df1",
+   "id": "0d669037",
    "metadata": {},
    "source": [
     "# Explore"
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7b71c1c8",
+   "id": "05703f3e",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "51ddcc9d",
+   "id": "e58e31d9",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5f5b81d2",
+   "id": "a2d39ca1",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e650c1d3",
+   "id": "45089939",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "94defb85",
+   "id": "c7bd007e",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2cef2512",
+   "id": "a76ea57d",
    "metadata": {
     "scrolled": true
    },
@@ -1518,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "452bfd4b",
+   "id": "77e66c54",
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ba91044b",
+   "id": "c4a58037",
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3060e812",
+   "id": "59d72dfe",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "89f6382a",
+   "id": "b682f62e",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9d3df351",
+   "id": "d6c81e18",
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a233c9e8",
+   "id": "6a702fe9",
    "metadata": {},
    "source": [
     "# Stats"
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f88710cf",
+   "id": "ded90cf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8571c2d8",
+   "id": "d7062de7",
    "metadata": {},
    "source": [
     "### establishing my initial hypothesis of number of bedrooms and tax value\n",
@@ -1720,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b38b70dd",
+   "id": "3cffac94",
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3a38548c",
+   "id": "8f9f6bb8",
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "65116749",
+   "id": "34da97ae",
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c83b5f",
+   "id": "d360035c",
    "metadata": {},
    "source": [
     "### Both tests rejected the null hypothesis of 'There is no correlation between number of bedrooms and tax value'"
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d15ab6c5",
+   "id": "fb9e2ece",
    "metadata": {},
    "source": [
     "### Establishing additional hypothesis of number of bathrooms and tax value\n",
@@ -1909,7 +1909,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9ea05584",
+   "id": "6d3b15a8",
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1937,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e4b5a394",
+   "id": "5a519eb8",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc5bc01",
+   "id": "dc3be75f",
    "metadata": {},
    "source": [
     "### Both tests rejected the null hypothesis of 'There is no correlation between number of bedrooms and tax value'"
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086791e5",
+   "id": "666ea90b",
    "metadata": {},
    "source": [
     "# Modeling"
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "25ac29e9",
+   "id": "fd702d96",
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "86834f36",
+   "id": "5855071f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2022,7 +2022,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7e2f6c52",
+   "id": "ef309384",
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d40e00d7",
+   "id": "72bfb063",
    "metadata": {},
    "source": [
     "# Baseline"
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4d4655ca",
+   "id": "681927f9",
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a22f274a",
+   "id": "dbd81734",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1c41ed66",
+   "id": "79baee42",
    "metadata": {},
    "outputs": [
     {
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf06d660",
+   "id": "a3dcf4bf",
    "metadata": {},
    "source": [
     "# Linear Regression (OLS)"
@@ -2198,7 +2198,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "028c42b3",
+   "id": "3a416354",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "473d4320",
+   "id": "45755d8a",
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd088cf",
+   "id": "678564d1",
    "metadata": {},
    "source": [
     "# LassoLars"
@@ -2271,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "92581c29",
+   "id": "fe46189f",
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1d96bc13",
+   "id": "608b0c79",
    "metadata": {},
    "outputs": [
     {
@@ -2333,7 +2333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a841338b",
+   "id": "91d28757",
    "metadata": {},
    "source": [
     "# TweedieRegressor (GLM)"
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "2b236db4",
+   "id": "7858266d",
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2583a983",
+   "id": "85c1a51e",
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c6553c",
+   "id": "6aaa6941",
    "metadata": {},
    "source": [
     "# Polynomial Regression"
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fa2065fa",
+   "id": "0ce2aaea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "72902c3b",
+   "id": "6825ffa9",
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "041d5f53",
+   "id": "9f0814f1",
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2497,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41635fe7",
+   "id": "6da2de07",
+   "metadata": {},
+   "source": [
+    "## Takeaways\n",
+    "- Baseline RMSE 363349\n",
+    "- RMSE LinearRegression  287686\n",
+    "- RMSE LassoLars  287705\n",
+    "- RMSE TweedieRegressor 287686\n",
+    "- RMSE Polynomial  284685"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f58c7da9",
    "metadata": {},
    "source": [
     "# Evaluate"
@@ -2506,7 +2519,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ebd72492",
+   "id": "db96fa38",
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2562,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "446b381a",
+   "id": "e5eafc2b",
    "metadata": {},
    "outputs": [
     {
@@ -2587,8 +2600,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "9cd349ba",
+   "execution_count": 69,
+   "id": "2f374af1",
    "metadata": {},
    "outputs": [
     {
@@ -2596,44 +2609,59 @@
      "output_type": "stream",
      "text": [
       "RMSE for OLS Model using LinearRegression\n",
-      "Out-of-Sample Performance:  5497986815.049967\n"
+      "Out-of-Sample Performance:  269196.96297603706\n"
      ]
     }
    ],
    "source": [
     "# Model Selection & Out-of-Sample Evaluation\n",
-    "# Model selected: lm (using LinearRegression)\n",
+    "# Model selected: lm2 (using LinearRegression)\n",
     "\n",
     "y_test = pd.DataFrame(y_test)\n",
     "\n",
     "# predict on test\n",
-    "y_test['tax_value_pred_lm'] = lm.predict(X_test)\n",
+    "y_test['tax_value_pred_lm2'] = lm2.predict(X_test_degree2)\n",
     "\n",
     "# evaluate: rmse\n",
-    "rmse_test = mean_squared_error(y_test.tax_value, y_test.tax_value_pred_lm)**(1/2)\n",
+    "rmse_test = mean_squared_error(y_test.tax_value, y_test.tax_value_pred_lm2)**(1/2)\n",
     "\n",
     "print(\"RMSE for OLS Model using LinearRegression\\nOut-of-Sample Performance: \", rmse_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "380e126e",
+   "execution_count": 71,
+   "id": "67e25200",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03006802",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41435581608402494"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_test.tax_value, y_test.tax_value_pred_lm2)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "e78ffab4",
+   "id": "4911c5e6",
+   "metadata": {},
+   "source": [
+    "## Takeaway\n",
+    " - baseline: 363349\n",
+    " - test : 269196"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38841eb6",
    "metadata": {},
    "source": [
     "# County Tax Rates"
@@ -2642,7 +2670,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "267f00b1",
+   "id": "1ff6d39a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2653,7 +2681,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9cfabbdd",
+   "id": "a0d8a87a",
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2905,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4e0ddc23",
+   "id": "feb08d82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2913,7 +2941,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f4b854c7",
+   "id": "8b95d8ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2924,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9cb8e5f3",
+   "id": "bddf5ebe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2935,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "57160b7c",
+   "id": "cc550395",
    "metadata": {},
    "outputs": [
     {
@@ -3070,7 +3098,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "46589f13",
+   "id": "0a2a3955",
    "metadata": {},
    "outputs": [
     {
@@ -3095,7 +3123,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "0230e6f8",
+   "id": "d822df62",
    "metadata": {},
    "outputs": [
     {
@@ -3119,7 +3147,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "cc84d8b4",
+   "id": "5fc87bd7",
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71d8ea7",
+   "id": "42e82185",
    "metadata": {},
    "outputs": [],
    "source": []
