update final notebook

--- a/zillow_final.ipynb
+++ b/zillow_final.ipynb
@@ -23,11 +23,17 @@
     "\n",
     "\n",
     "## Executive Summary \n",
-    "- This is where I need to complete my executive summary\n",
     "\n",
-    "- goal\n",
+    "- Single Unit Properties: Linear Regression model to predict property values using 2017 data\n",
     "\n",
-    "- takeaways\n",
+    "- Baseline: $363,349\n",
+    "\n",
+    "- Prediction: $269,196\n",
+    "\n",
+    "### Counties and Tax %:\n",
+    "- Los Angeles: 1.38 %\n",
+    "- Orange: 1.21 %\n",
+    "- Ventura: 1.19%\n",
     "\n"
    ]
   },
@@ -1360,7 +1366,7 @@
     }
    ],
    "source": [
-    "train.head()"
+    "train.head() # check_yo_head"
    ]
   },
   {
@@ -1389,6 +1395,7 @@
     }
    ],
    "source": [
+    "# sqft stats using describe\n",
     "train.sqft.describe()"
    ]
   },
@@ -1418,6 +1425,7 @@
     }
    ],
    "source": [
+    "# beds stats using describe\n",
     "train.beds.describe()"
    ]
   },
@@ -1447,6 +1455,7 @@
     }
    ],
    "source": [
+    "# baths stats using describe\n",
     "train.baths.describe()"
    ]
   },
@@ -1476,6 +1485,7 @@
     }
    ],
    "source": [
+    "# tax_value stats using describe\n",
     "train.tax_value.describe()"
    ]
   },
@@ -1581,6 +1591,7 @@
     }
    ],
    "source": [
+    "# making a pair plot to visualize the zillow data\n",
     "sns.pairplot(train.drop(columns='fips'))"
    ]
   },
@@ -1683,6 +1694,7 @@
     }
    ],
    "source": [
+    "# making a pairplot with a hue of 'baths' \n",
     "sns.pairplot(train.drop(columns=['fips', 'year_built']), hue='baths')"
    ]
   },
@@ -2094,7 +2106,7 @@
     }
    ],
    "source": [
-    "y_train.head()"
+    "y_train.head() #check_yo_head"
    ]
   },
   {
@@ -2689,6 +2701,7 @@
     }
    ],
    "source": [
+    "# r2 score for test data\n",
     "r2_score(y_test.tax_value, y_test.tax_value_pred_lm2)"
    ]
   },
@@ -2942,7 +2955,7 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.head() # check_yo_head"
    ]
   },
   {
@@ -3225,9 +3238,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67ae3e53",
+   "metadata": {},
+   "source": [
+    "# Thank You!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c284a62",
+   "id": "71ae8aef",
    "metadata": {},
    "outputs": [],
    "source": []
